--- a/project.config.json
+++ b/project.config.json
@@ -3,36 +3,26 @@
     "description": "",
     "appid": "wxec4fb92adb5a3177",
     "setting": {
-        "urlCheck": false,
-        "es6": true,
-        "enhance": false,
+        "urlCheck": true,
+        "scopeDataCheck": false,
+        "coverView": true,
+        "es6": false,
         "postcss": true,
+        "compileHotReLoad": false,
+        "lazyloadPlaceholderEnable": false,
         "preloadBackgroundData": false,
         "minified": true,
-        "newFeature": true,
-        "coverView": true,
-        "nodeModules": true,
         "autoAudits": false,
-        "showShadowRootInWxmlPanel": true,
-        "scopeDataCheck": false,
+        "newFeature": false,
         "uglifyFileName": false,
-        "checkInvalidKey": true,
-        "checkSiteMap": true,
         "uploadWithSourceMap": true,
-        "compileHotReLoad": false,
+        "useIsolateContext": true,
+        "nodeModules": false,
+        "enhance": true,
         "useMultiFrameRuntime": true,
         "useApiHook": true,
         "useApiHostProcess": true,
-        "babelSetting": {
-            "ignore": [],
-            "disablePlugins": [],
-            "outputPath": ""
-        },
-        "enableEngineNative": false,
-        "useIsolateContext": true,
-        "useCompilerModule": true,
-        "userConfirmedUseCompilerModuleSwitch": false,
-        "userConfirmedBundleSwitch": false,
+        "showShadowRootInWxmlPanel": true,
         "packNpmManually": false,
         "packNpmRelationList": [],
         "minifyWXSS": true
